<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="new_game">New Game:</string>
    <string name="new_play_computer">New game vs. Computer</string>
    <string name="new_play_friend">New game vs. player</string>
    <string name="settings">Settings</string>
    <string name="x_label">X : </string>
    <string name="o_label">O : </string>
    <string name="no_score">0</string>
    <string name="game_pvp">PvP</string>
    <string name="game_pvc">PvC</string>
</resources>
