<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.polybean.tony.tic_tac_toe.board.BoardFragment">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rowCount="@integer/board_game_row_count"
            android:columnCount="@integer/board_game_column_count"
            android:background="@drawable/game_board"
            android:id="@+id/game_board">
        </GridLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="25dp" />
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:text="@string/x_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_score"
                android:textSize="24sp"
                android:id="@+id/x_score"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:text="@string/o_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_score"
                android:textSize="24sp"
                android:id="@+id/no_score"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/game_pvc"
            android:id="@+id/game_type"/>
    </LinearLayout>

</RelativeLayout>
